# RAN

./: CMakeLists.txt  README.md
.cache/clangd/index/: crlf.hh.3DE8403AA67D750A.idx  log.cc.5D0616887DA816D7.idx  log.hh.B87AA3A118DA379C.idx  main.cc.2E62D28AB4BCDD7A.idx  main.cc.30C3EEF216D72E75.idx  maketree.cc.69D2E2BBFA93683F.idx  maketree.hh.0164E66CC873CB22.idx  puncutation.hh.A2B406708F416059.idx
demo/: hello.ran  hello.ran.pre  test.ran  test.ran.pre
docs/: types.md
includes/sys/: io.ran
src/compiler/: comp.cc  comp.hh  compilerdef.cc  compilerdef.hh  lex.cc  lex.hh  main.cc  maketree.cc  maketree.hh  syntaxtree.cc  syntaxtree.hh  treeproducer.hh
src/debug/: sttree.cc  sttree.hh
src/global/: crlf.hh  log.cc  log.hh  puncutation.hh
src/libs/sys/: io.cc
src/preprocessor/: main.cc
src/rancinterface/: type.hh
